--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -32,22 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'raw_input' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/media/arquivos1/Engenharia/PUCPR/M1 - Raciocínio Computacional/Zombie Dice/experiments.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/media/arquivos1/Engenharia/PUCPR/M1%20-%20Racioc%C3%ADnio%20Computacional/Zombie%20Dice/experiments.ipynb#ch0000002?line=0'>1</a>\u001b[0m i \u001b[39m=\u001b[39m raw_input(\u001b[39m\"\u001b[39m\u001b[39mPlease enter name[Jack]:\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mJack\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'raw_input' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "class Player:\n",
+    "    def __init__(self, name: str):\n",
+    "        self.name = name\n",
+    "        self.score = 0\n",
+    "        self.dices = []\n",
+    "\n",
+    "p = Player('teste')\n",
+    "print(p.score)\n",
+    "p.score = 10\n",
+    "print(p.score)"
+   ]
   }
  ],
  "metadata": {
