chore: convert dices faces to tuple; add logic when dice box is empty

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,14 +20,22 @@
      "output_type": "stream",
      "text": [
       "['green', 'green', 'green', 'green', 'green', 'green', 'yellow', 'yellow', 'yellow', 'yellow', 'red', 'red', 'red']\n",
-      "13\n"
+      "('green', 'green', 'green', 'green', 'green', 'green', 'yellow', 'yellow', 'yellow', 'yellow', 'red', 'red', 'red')\n",
+      "['green', 'green', 'green', 'green', 'green', 'green', 'yellow', 'yellow', 'yellow', 'yellow', 'red', 'red', 'red']\n",
+      "('green', 'green', 'green', 'green', 'green', 'green', 'yellow', 'yellow', 'yellow', 'yellow', 'red', 'red', 'red')\n"
      ]
     }
    ],
    "source": [
     "dices = ['green'] * 6 + ['yellow'] * 4 + ['red'] * 3\n",
+    "dices_tuple = tuple(dices)\n",
+    "dices2 = (['green'] * 6 + ['yellow'] * 4 + ['red'] * 3)\n",
+    "dices_tuple2 = tuple(['green'] * 6 + ['yellow'] * 4 + ['red'] * 3)\n",
+    "\n",
     "print(dices)\n",
-    "print(len(dices))"
+    "print(dices_tuple)\n",
+    "print(dices2)\n",
+    "print(dices_tuple2)"
    ]
   },
   {
@@ -56,6 +64,13 @@
     "p.score = 10\n",
     "print(p.score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
