fix: replace for loop used to remove its elements from list, replaced by a list comprehension

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -67,10 +67,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "\n",
+    "condition = lambda x: x > 1\n",
+    "b = [x for x in a if condition(x)]\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[teste - 10, teste - 0, teste - 10, teste - 0]\n",
+      "[teste - 10, teste - 0, teste - 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Player:\n",
+    "    def __init__(self, name: str):\n",
+    "        self.name = name\n",
+    "        self.score = 0\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.name} - {self.score}'\n",
+    "\n",
+    "pl = [Player('teste'), Player('teste'), Player('teste'), Player('teste')]\n",
+    "pl[2].score = 10\n",
+    "pl[0].score = 10\n",
+    "player = pl[2]\n",
+    "print(pl)\n",
+    "pl.remove(player)\n",
+    "print(pl)"
+   ]
   }
  ],
  "metadata": {
